pages/Lab03/style.css
  :root{
    --color-primary: rgb(25, 25, 25);
    --color-secondary: rgb(46, 46, 46); 
    --color-tertiary: rgb(31, 31, 31);
    --color-accent: rgb(255, 255, 255);
    --border-color: rgb(87, 87, 87);
    --size-avat: 30px;
    --size-side-icon: 25px;
    --size-title-font: 30px;
    --color-primary-font: rgb(255, 255, 255);
    --color-secondary-font: rgb(87, 87, 87);
    --gradient-primary: linear-gradient(to right, 
                                    rgb(231, 106, 106), 
                                    rgb(239, 147, 90), 
                                    rgb(194, 106, 231), 
                                    rgb(53, 69, 170));
    --height-line-card: 40px;
  }
  
  body {
    background: rgb(27, 23, 23);
    padding: 0px;
    margin: 0px;
    font-family: 'Roboto Slab', sans-serif;
    font-size: 16px;
    color: var(--color-primary-font);
  }
  
  #main-cont {
    display: grid;
    border-radius: 30px;
    grid-template-columns: 1fr 12fr;
    margin: 20px 20px;
    background: rgb(46, 46, 46);
  }
/* sidebar start */
  #side-bar {
    width: 100px;
    height: 100vh;
    border-radius: 30px 0px 0px 30px;
    background: var(--color-secondary);
    display: grid;
    grid-template-rows: 1fr 8fr 1fr;
  }

  #side-top-cont, #side-bot-cont, #side-mid-cont {
    display: flex;
    justify-content: center;
    align-items: center;
  }

  #side-mid-cont {
    flex-direction: column;
    gap: 20px;

  }

  #side-top-cont img{
    width: var(--size-avat);
    height: var(--size-avat);
    border-radius: 50%;
  }

  #side-bot-cont img{
    width: var(--size-avat);
    height: var(--size-avat);
    border-radius: 50%;
  }

  .side-icons img{
    width: var(--size-side-icon);
    height: var(--size-side-icon);
  }

  .side-icons {
    cursor: pointer;
    padding-left: 20px;
    margin-left: 10px;
    width: 70px;
    height: 60px;
    display: flex;
    justify-content: center;
    align-items: center;
    border-radius: 30px 0px 0px 30px;
    transition: background-color 0.15s ease-in-out;
  }

  .side-icons:hover {
    background-color: var(--color-primary);
  }
  /* sidebar end */

  /* body start */
  #body-cont {
    margin: 20px 20px 20px 0px;
    background: var(--color-primary); 
    border-radius: 30px;
    width: 100%;
  }

  #header{
    display: flex;
    justify-content: space-between;
    align-items: center;
    padding: 20px;
    font-size: var(--size-title-font);
    color: var(--color-primary-font);
    border-radius: 30px 30px 0px 0px;
  }

  #dropdown {
    background-color: var(--color-secondary);
    border-radius: 10px;
    border: 0px solid black;
    height: 40px;
    width: 80px;
    padding: 0px 10px;
    text-decoration: none;
    color: var(--color-primary-font);
    font-weight: 700;
    align-items: center;
  }

  #register {
    background-image: var(--gradient-primary);
    background-size: 200%;
    border-radius: 10px;
    border: 0px solid black;
    height: 40px;
    width: 100px;
    padding: 0px 10px;
    text-decoration: none;
    color: var(--color-primary-font);
    font-weight: 700;
    align-items: center;
    
  }

  #body {
    display: grid;
    grid-template-columns: 2fr 5fr;
    gap: 20px;
  }

  #left-body{
    display: grid;
    grid-template-rows: 2fr 3fr;
    flex-direction: column;
    justify-content: center;
    align-items: center;
    gap: 50px;
  }
  
  #btn-div{
    display: flex;
    justify-content: center;
    align-items: center;
    gap: 20px;
  }

  .card {
    background-color: var(--color-primary);
    border-radius: 25px;
    background-color: var(--color-tertiary);
    display: flex;
    flex-direction: column;
    justify-content: center;
    padding: 35px;
    text-decoration: none;
    color: var(--color-primary-font);
    font-weight: 700;
    width: max-content;
  }

  #right-body{
    display: flex;
    flex-direction: column;
    gap: 20px;
  }



  #card1 {
    width: 300px;
    height: 200px;
    max-height: 300px;
    /* height: 100%; */
  }
  #usd{
    font-size: 30px;
    line-height: var(--height-line-card);
    font-weight: 700;
  }

  #etb{
    font-size: 13px;
    line-height: var(--height-line-card);
    color: var(--color-secondary-font);
  }

  #card2{
    background-color: white;
    height: 100%;
    width: 300px;
    color: var(--color-primary);
  }

  #card2 img{
    width: 30px;
    height: 30px;

  }

  #card3 {
    background: url(./images/stock.png);
    background-size: cover;
    background-position: center;
    width: 93%;
    height: 400px;
  }

  #card3 img {
    width: 130px;
    height: 130px;
  }

  #card4{
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
    gap: 20px;
  }

  .table {
    background-color: var(--color-secondary);
    width: 100%;
    height: 70px;
    align-items: center;
    border-radius: 25px;
    background-color: var(--color-tertiary);
    display: flex;
    flex-direction: row;
    justify-content: space-between;
    text-decoration: none;
    color: var(--color-primary-font);
    font-weight: 500;
    font-size: smaller;
  }

  .table label {
    padding: 5px 20px;
  }

   label:last-child{
    font-weight: 500;
    color: green;
  }

  #inner-body-cont{
    margin: 20px;
    padding: 20px;
  }


  .btn{
    cursor: pointer;
    background-color: var(--color-primary);
    border-radius: 10px;
    border: 0.5px solid var(--border-color);
    height: 40px;
    width: 100px;
    padding: 0px 10px;
    text-decoration: none;
    color: var(--color-primary-font);
    font-weight: 700;
    align-items: center;
  }

  .btn:hover{
    background-color: var(--color-accent);
    color: var(--color-primary);
    border: 0.5px solid var(--color-primary);
  }

  
  /* body end */

